# prologue.run

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
db/: schema.sql
db/migrations/: 001_race_translations.sql  002_add_poi_columns.sql
messages/: en.json  zh-hk.json
public/: README.md  prologue-run-about-overlay.avif  prologue-run-about.avif
race-processor/: USAGE.md  pyproject.toml  race-config.json
race-processor/src/race_processor/: __init__.py  cli.py  config.py
race-processor/src/race_processor/detection/: __init__.py  ensemble.py
race-processor/src/race_processor/insta360/: __init__.py  filename.py
race-processor/src/race_processor/pipeline/: __init__.py  card_assets.py  export.py  ingest.py  intake.py  orchestrator.py  upload.py  watermark.py
race-processor/src/race_processor/utils/: db.py  exif.py  geo.py  gpx_override.py  gpx_process.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/[locale]/: layout.tsx  not-found.tsx  page.tsx
src/app/privacy/: page.tsx
src/app/terms/: page.tsx
src/app/test-db/: page.tsx
src/components/landing/: AboutSection.tsx  AddRouteCard.tsx  ContactSection.tsx  ElevationBars.tsx  (+9 more)
src/hooks/: useImageLoader.ts  useKeyboardNav.ts  useViewStateUrl.ts  useViewTracking.ts  useViewer.ts
src/i18n/: config.ts
src/lib/: constants.ts  db.ts  formatters.ts  imageUrl.ts  panorama.ts  poi.ts  ratelimit.ts  utils.ts  viewState.ts  visualDistance.ts
src/types/: index.ts
(+30 files in other folders)
